Ajustando configurações e removendo arquivos conflitantes para o build funcionar