@@ -13,8 +13,7 @@ dependencies
 {
     implementation 'org.openjfx:javafx-controls:17'
     implementation 'com.google.code.gson:gson:2.12.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 }
 
 application
@@ -25,6 +24,17 @@ application
 test
 {
     useJUnitPlatform()  // This ensures Gradle uses JUnit 5 to run tests
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+    // If using Java 20, make sure to specify this:
+    jvmArgs = ['--enable-preview']
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(20))
+    }
 }
 
 tasks.withType(JavaExec)
@@ -45,11 +55,11 @@ sourceSets
             srcDirs = ['src']  // Specify the source directory for your Java files
         }
     }
-    test
-    {
-        java
-        {
-            srcDirs = ['src/test/java'] // Ensure this points to the correct test directory
-        }
-    }
+    // test
+    // {
+    //     java
+    //     {
+    //         srcDirs = ['src/test/java'] // Ensure this points to the correct test directory
+    //     }
+    // }
 }
